--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -1,15 +1,12 @@
 * {
-  max-width: 1200px;
+  width: 100%;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center center;
+  margin: 0;
 }
 
 ul {
   list-style-type: none;
-  margin: 0;
   padding: 0;
   background-color: #c2c2d6;
 
