--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -49,3 +49,8 @@ li {
 .contact {
   padding: 80px;
 }
+
+/* Add a hover effect (blue shadow) */
+.site:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
