--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -91,6 +91,10 @@ li {
   padding: 80px;
 }
 
+.fa {
+  font-size: -webkit-xxx-large;
+}
+
 /* Add a hover effect (blue shadow) */
 .site:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
