--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -112,7 +112,7 @@ li {
 #contact {
 	background:#F9F9F9;
 	padding:25px;
-	margin:50px 0;
+	margin-top:50px;
 }
 
 #contact h3 {
@@ -166,4 +166,9 @@ fieldset {
 	margin:0 0 5px;
 	padding:10px;
 	font-size:15px;
+}
+
+#final {
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
