--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -15,10 +15,15 @@ body {
   float: none !important;
 }
 
+#main {
+    margin-top: 50px;
+}
+
 .navbar {
   margin-bottom: 0;
   border-radius: 0;
 }
+
 
 .me {
   display: flex;
@@ -41,7 +46,7 @@ body {
 }
 
 .lead {
-  font-size: 24px;
+  font-size: 40px;
 }
 
 
