--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -69,6 +69,7 @@ li {
 }
 
 .mid {
+  width: 100%;
   display: inline-block;
 }
 
@@ -76,6 +77,7 @@ li {
   display: flex;
   flex-flow: row;
   padding-top: 10em;
+  width: 100%;
 }
 
 #midhead {
