--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -120,6 +120,10 @@ li {
 	margin:0 auto;
 }
 
+.contact {
+  padding: 0;
+}
+
 #contact input[type="text"], #contact input[type="email"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
 #contact {
